--- a/EggTimer/EggTimer/Base.lproj/Main.storyboard
+++ b/EggTimer/EggTimer/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -121,6 +122,21 @@
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nJN-th-c5K" userLabel="Timer View">
                                         <rect key="frame" x="0.0" y="515.33333333333337" width="343" height="218.66666666666663"/>
+                                        <subviews>
+                                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="SE5-ey-nmC">
+                                                <rect key="frame" x="0.0" y="107" width="343" height="6"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="5" id="qxY-cA-jKl"/>
+                                                </constraints>
+                                                <color key="progressTintColor" systemColor="systemYellowColor"/>
+                                                <color key="trackTintColor" systemColor="systemGrayColor"/>
+                                            </progressView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="SE5-ey-nmC" firstAttribute="centerY" secondItem="nJN-th-c5K" secondAttribute="centerY" id="IiD-Xx-y4z"/>
+                                            <constraint firstItem="SE5-ey-nmC" firstAttribute="leading" secondItem="nJN-th-c5K" secondAttribute="leading" id="PAn-mb-9mq"/>
+                                            <constraint firstAttribute="trailing" secondItem="SE5-ey-nmC" secondAttribute="trailing" id="Pfp-MP-WXa"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                             </stackView>
@@ -136,6 +152,7 @@
                     </view>
                     <connections>
                         <outlet property="label" destination="XLm-5r-pSP" id="3JL-Qp-hNC"/>
+                        <outlet property="progressBar" destination="SE5-ey-nmC" id="8wW-s6-LYV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -147,5 +164,11 @@
         <image name="hard_egg" width="287.66665649414062" height="366.33334350585938"/>
         <image name="medium_egg" width="288" height="363.33334350585938"/>
         <image name="soft_egg" width="287" height="365.33334350585938"/>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
